[package]
name = "picterm"
version = "0.0.7"
authors = ["Keisuke Toyota <hm.pudding0715@gmail.com>"]
edition = "2018"
repository = "https://github.com/ksk001100/picterm"
keywords = ["tui", "image"]
license-file = "LICENSE"
readme = "README.md"
description = "TUI image viewer"

[dependencies]
crossterm = "0.23"
tui = { version = "0.17", default-features = false, features = ['crossterm'] }
image = "0.23"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
seahorse = "2.0.0"
byte-unit = "4.0"
ansi_rgb = "0.2"
rgb = "0.8"
