[package]
name = "picterm"
version = "0.0.11"
authors = ["Keisuke Toyota <hm.pudding0715@gmail.com>"]
edition = "2018"
repository = "https://github.com/ksk001100/picterm"
keywords = ["tui", "image"]
license-file = "LICENSE"
readme = "README.md"
description = "TUI image viewer"

[dependencies]
crossterm = "0.23"
tui = { package = "ratatui", version = "0.22", features = ["all-widgets"]}
image = "0.23"
tokio = { version = "1.32", features = ["full"] }
eyre = "0.6"
seahorse = "2.0.0"
byte-unit = "4.0"
ansi_rgb = "0.3.2-alpha"
rgb = "0.8"
